k8s/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sisko-worker
  namespace: sisko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sisko-worker
  template:
    metadata:
      labels:
        app: sisko-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/danangoffic/sisko:latest
          command: ["php", "artisan", "queue:work", "--sleep=3", "--tries=3", "--max-time=3600"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
