k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sisko-app
  namespace: sisko
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sisko-app
  template:
    metadata:
      labels:
        app: sisko-app
    spec:
      containers:
        - name: app
          image: ghcr.io/danangoffic/sisko:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sisko-app
  namespace: sisko
spec:
  selector:
    app: sisko-app
  ports:
    - port: 80
      targetPort: 80
